[package]
name = "RustQTS"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
futures-util = "0.3"
rand = "0.8"
thiserror = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"
uuid = { version = "1.0", features = ["v4"] }